--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-.appartment{
+/* .appartment{
     border: 3px solid red;
+} */
+
+.like-btn{
+    font-size: xx-large;
+    cursor: pointer;
+    user-select: none;
+}
+
+.material-symbols-outlined {
+    color: red;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 100,
+  'GRAD' 200,
+  'opsz' 48
 }
